# Dissertation

./: .gitignore  2-4.trace  import-summary.txt  settings.gradle
OpenCV4Android430/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
app/: build.gradle
app/src/androidTest/java/com/jinkawin/dissertation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .MobileNetSSD_deploy.caffemodel.icloud
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  Detector.hpp  Parallel.hpp  dummy-lib.cpp  native-lib.cpp
app/src/main/java/com/jinkawin/dissertation/: Box.java  CameraActivity.java  Centre.java  Detection.java  DetectionLog.java  FileUtility.java  Frame.java  ImageProcessor.java  ImageProcessorManager.java  ImageProcessorRunnable.java  ImageProcessorTask.java  ImageReader.java  Main2Activity.java  MainActivity.java  ModelSetup.java  ModelType.java  NativeLib.java  ProcessStatus.java  ResponseType.java  Result.java  ResultComparator.java  SocialDistanceDetection.java  TaskProcessorMethods.java  TestImageProcessor.java  VideoManager.java  VideoReader.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  hello-jni.c
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/jinkawin/dissertation/: ExampleUnitTest.java  SocialDistanceDetectionTest.java
gradle/wrapper/: gradle-wrapper.properties
